fix: set iframe height and width to avoid overflow or invisible padding

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -194,7 +194,8 @@ section {
 }
 
 .event iframe {
-  width: 100%;
+  width: max(100%, 230px);
+  height: 80px;
 }
 
 .event__timeline {
